[package]
name = "type_of"
version = "1.0.0"
authors = ["a2p1k02 <fl4ckyp@gmail.com>"]
edition = "2018"
description = "Rust library which was created to help find type of variable"
documentation = "https://github.com/a2p1k02/type_of"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["cli", "help"]
categories = ["command-line-utilities", "development-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
